# GPT-GOOSESim

./: CMakeLists.txt  README.md
docs/: deliverables.md  repo_review.md  system_architecture.md
examples/: scenario.yaml  station.scd
include/goose_sim/cli/: command_interface.hpp
include/goose_sim/core/: monotonic_clock.hpp  scheduler.hpp  thread_pool.hpp
include/goose_sim/goose/: frame_codec.hpp  pub_goose_encoder.hpp  publisher.hpp  retransmission_engine.hpp  sub_goose_decoder.hpp  subscriber.hpp  supervision.hpp
include/goose_sim/model/: data_attributes.hpp  ied_model.hpp  types.hpp
include/goose_sim/network/: capture_engine.hpp  ethernet_frame_builder.hpp  multicast_manager.hpp  raw_socket.hpp  vlan_handler.hpp
include/goose_sim/recording/: pcap_writer.hpp  statistics.hpp
include/goose_sim/scl/: pub_dataset_builder.hpp  pub_goose_config_builder.hpp  scl_parser.hpp  sub_dataset_builder.hpp  sub_goose_config_builder.hpp
include/goose_sim/simulation/: event_engine.hpp  ied_instance.hpp  state_machine.hpp
include/goose_sim/validation/: latency_analyzer.hpp  rule_engine.hpp
src/: main.cpp
src/cli/: command_interface.cpp
src/core/: monotonic_clock.cpp  scheduler.cpp  thread_pool.cpp
src/goose/: frame_codec.cpp  pub_goose_encoder.cpp  publisher.cpp  retransmission_engine.cpp  sub_goose_decoder.cpp  subscriber.cpp  supervision.cpp
src/model/: data_attributes.cpp  ied_model.cpp
src/network/: capture_engine.cpp  ethernet_frame_builder.cpp  multicast_manager.cpp  raw_socket.cpp  vlan_handler.cpp
src/recording/: pcap_writer.cpp  statistics.cpp
src/scl/: pub_dataset_builder.cpp  pub_goose_config_builder.cpp  scl_parser.cpp  sub_dataset_builder.cpp  sub_goose_config_builder.cpp
src/simulation/: event_engine.cpp  ied_instance.cpp  state_machine.cpp
src/validation/: latency_analyzer.cpp  rule_engine.cpp
tests/: test_scheduler.cpp  test_scl_parser.cpp
